--- a/css/tienda.css
+++ b/css/tienda.css
@@ -11,4 +11,5 @@ main {
   min-height: 100vh;
   overflow-y: auto;
   padding-bottom: 4rem;
+  padding-top: 150px; /* espacio para que no quede tapado */
 }
