--- a/css/contacto.css
+++ b/css/contacto.css
@@ -11,6 +11,7 @@ main {
   min-height: 100vh;
   overflow-y: auto;
   padding-bottom: 4rem;
+  padding-top: 150px; /* espacio para que no quede tapado */
 }
 
 body::-webkit-scrollbar {
