--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -14,4 +14,5 @@ main {
   min-height: 100vh;
   overflow-y: auto;
   padding-bottom: 4rem;
+  padding-top: 150px; /* espacio para que no quede tapado */
 }
