--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -24,7 +24,7 @@ body::-webkit-scrollbar {
 }
 
 .color-back {
-  background-image: url('/assets/nav/fondo banner_2.jpg');
+  background-image: url('../assets/nav/fondo banner_2.jpg');
   margin: 0;
   padding: 2rem 1rem;
   width: 100%;
