mejora de titulos

--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -21,7 +21,7 @@ body::-webkit-scrollbar {
 .centered-justified {
   max-width: 800px;       /* o el ancho que quieras */
   margin: 0 auto;         /* centra horizontalmente */
-  text-align: left;    /* alinea el texto a ambos márgenes */
+  text-align: center;    /* alinea el texto a ambos márgenes */
 }
 
 .color-back {
